--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .user_container{
-    height: 100vh;
+    height: fit-content;
     width: 100%;
     border-radius: 2px solid black;
     display: flex;
